# Continuum

./: .gitignore  AGENTS.md  Cargo.toml  README.md
project-directives/dogfooding/: runtime-entrypoint-infrastructure-regressions.md  two-file-document-sync-regressions.md
project-directives/implementation-artifacts/: planner-decision-split-deblock-mandate.md  refactor-structure-mandate.md  refactor-structure-step-4-deblock-mandate.md  refactor-structure-step-5-deblock-mandate.md  refactor-structure-step-7-deblock-mandate.md  slice-1-closure.md  slice-1-implementation-mandate.md  slice-2-implementation-mandate.md  slice-3-design-mandate.md  slice-3-runtime-critic-signal-decision.md
project-directives/planning-artifacts/: architecture.md  product-brief.md
src/: codex_local_builder.rs  entrypoint_cli.rs  lib.rs  local_shell_runtime.rs  main.rs
src/application/: actors.rs  mod.rs  planner.rs  post_critic_signal.rs  runtime_policy.rs  runtime_use_case_authority.rs  scholar.rs  session_flow_decision.rs  session_runner.rs  workflow.rs
src/application/runtime/: builder.rs  builder_run_report.rs  critic.rs  critic_signal.rs  mod.rs  post_critic_planner.rs  runtime_policy.rs  runtime_use_case_authority.rs  session_flow_decision.rs  session_runner.rs
src/domain/: handoff_decision.rs  mod.rs  raw_mission.rs  scholar_output.rs  session.rs  task_contract.rs  verdict.rs
src/infrastructure/: mod.rs
src/infrastructure/cli/: bootstrap_tui_shell.rs  entrypoint_cli.rs  mod.rs  terminal_rendering.rs
src/infrastructure/execution/: codex_local_builder.rs  mod.rs
src/infrastructure/runtime/: local_shell_runtime.rs  mod.rs
tests/: runtime_critic_signal_tests.rs  runtime_planner_revision_tests.rs  runtime_stop_interception_tests.rs  runtime_use_case_authority_tests.rs
tests/application/runtime/: runtime_critic_signal_tests.rs  runtime_planner_revision_tests.rs  runtime_use_case_authority_tests.rs
tests/application/session_runner/: runtime_stop_interception_tests.rs  session_runner_failure_tests.rs  session_runner_happy_path_tests.rs
tests/cli/: cli_minimal_runtime_shell_tests.rs
tests/domain/: planner_decision_tests.rs  planner_tests.rs  raw_mission_tests.rs  scholar_output_tests.rs  scholar_tests.rs  session_tests.rs  task_contract_tests.rs  verdict_tests.rs
tests/e2e/: session_e2e_happy_path_tests.rs  session_e2e_scholar_planner_handoff_tests.rs  session_e2e_stop_tests.rs  session_e2e_with_data_tests.rs
tests/infrastructure/cli/: cli_minimal_runtime_shell_tests.rs  cli_tui_bootstrap_shell_tests.rs  cli_tui_mission_submission_tests.rs  cli_tui_session_list_tests.rs  tui_test_harness.rs
tests/session_runner/: session_runner_failure_tests.rs  session_runner_happy_path_tests.rs
tests/state_machine/: state_machine_guard_tests.rs  state_machine_transition_tests.rs
