[package]
name = "continuum"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
crossterm = "0.28.1"

[[test]]
name = "task_contract_tests"
path = "tests/domain/task_contract_tests.rs"

[[test]]
name = "verdict_tests"
path = "tests/domain/verdict_tests.rs"

[[test]]
name = "session_tests"
path = "tests/domain/session_tests.rs"

[[test]]
name = "raw_mission_tests"
path = "tests/domain/raw_mission_tests.rs"

[[test]]
name = "scholar_output_tests"
path = "tests/domain/scholar_output_tests.rs"

[[test]]
name = "scholar_tests"
path = "tests/application/scholar_tests.rs"

[[test]]
name = "runtime_critic_signal_tests"
path = "tests/application/runtime/runtime_critic_signal_tests.rs"

[[test]]
name = "runtime_planner_revision_tests"
path = "tests/application/runtime/runtime_planner_revision_tests.rs"

[[test]]
name = "runtime_use_case_authority_tests"
path = "tests/application/runtime/runtime_use_case_authority_tests.rs"

[[test]]
name = "runtime_stop_interception_tests"
path = "tests/application/session_runner/runtime_stop_interception_tests.rs"

[[test]]
name = "session_runner_happy_path_tests"
path = "tests/application/session_runner/session_runner_happy_path_tests.rs"

[[test]]
name = "session_runner_failure_tests"
path = "tests/application/session_runner/session_runner_failure_tests.rs"

[[test]]
name = "session_e2e_happy_path_tests"
path = "tests/e2e/session_e2e_happy_path_tests.rs"

[[test]]
name = "session_e2e_stop_tests"
path = "tests/e2e/session_e2e_stop_tests.rs"

[[test]]
name = "session_e2e_with_data_tests"
path = "tests/e2e/session_e2e_with_data_tests.rs"

[[test]]
name = "cli_minimal_runtime_shell_tests"
path = "tests/infrastructure/cli/cli_minimal_runtime_shell_tests.rs"

[[test]]
name = "cli_tui_bootstrap_shell_tests"
path = "tests/infrastructure/cli/cli_tui_bootstrap_shell_tests.rs"

[[test]]
name = "cli_tui_mission_submission_tests"
path = "tests/infrastructure/cli/cli_tui_mission_submission_tests.rs"
